--- a/editor/index.html
+++ b/editor/index.html
@@ -30,7 +30,7 @@
             <div class="mapRow">
               <template x-for="(cell, x) in row">
                 <div class="cell" @click="cellClick(x, y, $event)" @mousemove="cellClick(x, y, $event)" @contextmenu="cellClear(x, y)" :style="{ 'background-image': getImageForCell(x,y) }">
-                  <div class="cellExtra" :style="{ 'background-image': getOverlayForCell(x,y) }">&nbsp;</div>
+                  <div class="cellExtra" :style="{ 'background-image': getOverlayForCell(x,y) }" :title="getCell(x, y).e">&nbsp;</div>
                 </div>
               </template>
             </div>
